# MyPro

./: .dockerignore  .env  Dockerfile  docker-compose.yaml  entrypoint.sh  psycopg2-2.9.9-cp312-cp312-macosx_10_9_universal2.whl  pyproject.toml
.github/workflows/: deploy_main.yaml  push_any_except_main.yaml
deploy/: .env  docker-compose.yaml
todolist/: settings.py  urls.py
todolist/bot/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
todolist/bot/management/comands/: runbot.py
todolist/bot/migrations/: 0001_initial.py
todolist/bot/tg/: client.py  schemas.py
todolist/core/: admin.py  apps.py  serializers.py  urls.py  views.py
todolist/core/migrations/: 0001_initial.py
todolist/goals/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
todolist/goals/migrations/: 0001_add_doals_catagory_model.py  0002_add_goals__model.py
