[tool.poetry]
name = "pythonprojectmypro"
version = "0.1.0"
description = ""
authors = ["nikolay_bogdan <dhjan44@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
envparse = "^0.2.0"
psycopg2-binary = "^2.9.9"
gunicorn = "^22.0.0"
djangorestframework = "^3.15.1"
social-auth-app-django = "^5.4.1"
django-filter = "^24.2"
pydantic = "^2.7.3"
requests = "^2.32.3"
serializers = "^0.2.4"



[tool.poetry.group.dev.dependencies]
ansible-vault = "^2.1.0"
django-extensions = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
